can now select a subreddit to see pics

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,3 +1,8 @@
+<form {{action lookupSubreddit on="submit"}}>
+  {{input value=subreddit}}
+  <input type="submit">
+</form>
+
 <ul>
 {{#each}}
   <li>
